升级 JDK 版本至 25
Signed-off-by: wangql <1324183708@qq.com>